WHATEVER	WHENEVER	Javier Taibo <javier.taibo@gmail.com>
	BUG FIX. Corrected typo in common.h that broke compilation under Linux

0.4.2	2010/10/26	Javier Taibo <javier.taibo@gmail.com>
	Hidden (visibility=false) nodes (and their children) are not exported
	Camera animation files are now prefixed by the scene base file name
	Previsualization from Maya uses camera configuration from active panel (if exported)
	BUG FIX exporting cameras under transform nodes. Now the whole hierarchy is correctly applied
	BUG FIX exporting camera animations. Path was wrong when converting from Y-up to Z-up
	BUG FIX in importer. It crashed when importing geometry with normals but no normal indices
	Per-fragment lighting Lambert shader (with fallback to OpenGL material if shader not supported)
	Config option for creating GLSL shaders. Preliminary support for GLSL shaders (lambert w/o textures)

0.4.1	2010/10/01	Javier Taibo <javier.taibo@gmail.com>
	BUG FIX in export MEL script, when using shelf button "Export to OSG (option box)"
	Lighting model: local viewer, global ambient color
	Preliminary shadows support (osgShadow)

0.4.0	2010/09/30	Javier Taibo <javier.taibo@gmail.com>
	Export any transform animation, baked with configurable sampling step in the option box "sample by"
	Bug fixed: spot light cone angle
	Added a button to "export and preview" in the option box
	Option to convert from Y-Up to Z-Up coordinate system when exporting
	Particle systems preliminary support
	Maya GUI dialog window for exporter configuration
	New maya2osg command-line options (-exportDefaultCameras, -exportOrthoCameras, -surfaceMode, -texClampMode, ...)
	Test models/scenes in a Maya project
	Single/double sided surfaces (backface culling) and two-side lighting mode
	Import geometry normals
	Automated installation for current user after compilation in Visual Studio
	Installation batch file for Windows (INSTALL.bat)